[package]
name = "ololiuhqui-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55.0", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-std = "1.13.0"
async-trait = "0.1.51"

# Consensus
paxakos = "0.13"
blake2b-pow = "0.1.1"

# Cryptography Format
pkcs8 = "0.10.2"


# Markdown
markdown = "1.0.0-alpha.22"

# Logging
log = "0.4.14"
env_logger = "0.9.0"

# Slug
libslug = "0.3.2"